--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1ZLB5hBKtU-4V_L8Y9jQVHljyTZ9Dut2N">鼻</a></td><td>芥川竜之介</td><td>中国うさぎ-ノーマル</td><td>650 B</td><td>0:00:00</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=19WsruunbOZl3C9BMsNnpYtpf1C42MH-f">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>49.74 MiB</td><td>0:18:06</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1SyCr2P9kmmBxyw9UAbZpUmOnUSRT-JFt">貉</a></td><td>小泉八雲</td><td>ずんだもん-ささやき</td><td>13.43 MiB</td><td>0:02:39</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1mfETUkskx0xZ6qMopna3g8Hmw-3SK63C">貉</a></td><td>小泉八雲</td><td>ずんだもん-ささやき</td><td>13.43 MiB</td><td>0:04:53</td></tr>
 </table></body></html>
