--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1SyCr2P9kmmBxyw9UAbZpUmOnUSRT-JFt">貉</a></td><td>小泉八雲</td><td>ずんだもん-ささやき</td><td>13.43 MiB</td><td>0:02:39</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1mfETUkskx0xZ6qMopna3g8Hmw-3SK63C">貉</a></td><td>小泉八雲</td><td>ずんだもん-ささやき</td><td>13.43 MiB</td><td>0:04:53</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1LQ-mK9zdM88Dv23x47TgZ8zAPtzlWXve">河童</a></td><td>芥川竜之介</td><td>四国めたん-ささやき</td><td>280.98 MiB</td><td>1:42:18</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1Eqph2WuNepugek77x4KiSpaDtLMpBUml">人間椅子</a></td><td>江戸川乱歩</td><td>ずんだもん-ささやき</td><td>142 MiB</td><td>0:28:14</td></tr>
 </table></body></html>
