--- a/index.html
+++ b/index.html
@@ -4,40 +4,5 @@
 <tr>
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th>
 </tr>
-<tr class="14><td><a href="https://drive.google.com/uc?export=download&id=1AROQrEEClizBGEz5CzFQ4R7sbbKqyjjG">杜子春</a></td><td>芥川竜之介</td><td>冥鳴ひまり</td><td>63.72 MiB<</td><td>0:23:12</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1A9solH4vK6ZIS1jDNlKRejwZZ2jfdfY3">船中八策</a></td><td>坂本竜馬</td><td>もち子さん-ノーマル</td><td>3.47 MiB</td><td>0:01:15</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1xgWN_woQcZjMscFpMlnykrpjXZSW8mZv">船中八策</a></td><td>坂本竜馬</td><td>もち子さん-ノーマル</td><td>3 MiB</td><td>0:01:15</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1xCBqWG-2HD_VA_il-Mmc8aXnrHvRmytw">船中八策</a></td><td>坂本竜馬</td><td>白上虎太郎-わーい</td><td>3 MiB</td><td>0:01:15</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1TR4Vmm-G9fO0llB2QAOBZAFZePZUVurP">羅生門</a></td><td>芥川竜之介</td><td>No.7-アナウンス</td><td>30 MiB</td><td>0:11:15</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1VZaBaVnnFASbqJfB5C8qT_tJimqGkmRo">懐中時計</a></td><td>土原耕作</td><td>玄野武宏-ツンギレ</td><td>1.1 MiB</td><td>0:00:24</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=19NRagQYSH8bIm_Lequr4Rl7ILnTsOcfw">羅生門</a></td><td>芥川竜之介</td><td>満別花丸-元気</td><td>39.92 MiB</td><td>0:14:31</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1wxdA-iraz0bVYi3Bm062GGPI9wtU4XFh">船中八策</a></td><td>坂本竜馬</td><td>ナースロボ＿タイプＴ-内緒話</td><td>3.78 MiB</td><td>0:01:22</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1ipHTTfgsFpFhtYHZ3a472AnlNsFrVjHj">黒死館殺人事件</a></td><td>小栗虫太郎</td><td>冥鳴ひまり-ノーマル</td><td>283.45 KiB</td><td>0:00:06</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1S4_RFEGSIGz8FPOLE3bH01b3R0XiKAg1">Ｌ氏殺人事件</a></td><td>片山広子</td><td>四国めたん-あまあま</td><td>384.0 B</td><td>0:00:00</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1EvABJcoPt7Bs3BuYViUWE8349K5_t5MP">Ｌ氏殺人事件</a></td><td>片山広子</td><td>雨晴はう-ノーマル</td><td>4.3 MiB</td><td>0:01:33</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1_WT3BikIX2Cv8zCMO9SuJxn2Wuz8I5N6">黒死館殺人事件</a></td><td>小栗虫太郎</td><td>ずんだもん-ノーマル</td><td>12.21 MiB</td><td>0:04:26</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1LMy1yIry8878lfVfNPLJu-X5n5f_0Tmx">羅生門</a></td><td>芥川竜之介</td><td>春日部つむぎ-ノーマル</td><td>45.32 MiB</td><td>0:16:30</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1eLD4W2nUkwnIGcWdyI9uAf8IqgL_54b-">心理試験</a></td><td>江戸川乱歩</td><td>春日部つむぎ-ノーマル</td><td>178.06 MiB</td><td>1:04:49</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1Y09IokbMUjOWTHVK11AOwzw6-eu_Q06P">モルグ街の殺人事件</a></td><td>ポーエドガー・アラン</td><td>ずんだもん-ノーマル</td><td>294 MiB</td><td>1:47:20</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1WbrCWDfzq0um__Eu_ufXC3ZVFsITpm4Z">貉</a></td><td>小泉八雲</td><td>ずんだもん-ノーマル</td><td>12 MiB</td><td>0:02:31</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=14guoj2AGx3lefF4UTxe2sBm6uOr0VAy0">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>546 B</td><td>0:00:00</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1Gkr72r28RICxSvUWycplWfVRru1l7beh">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>626 B</td><td>0:00:00</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1X45IQZVYDzbeT4wjL7wzJHxsxITj2Gho">貉</a></td><td>小泉八雲</td><td>ずんだもん-ノーマル</td><td>917 KiB</td><td>0:00:19</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1jjU7VSwicZumiYJVcVYQYhPKx4VrK-yn">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>49 MiB</td><td>0:18:06</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1FaazlhiU29-WptjuHNS4AD0nPCQtXOQx">〔雨ニモマケズ〕</a></td><td>宮沢賢治</td><td>ずんだもん-ノーマル</td><td>87.59 KiB</td><td>0:00:01</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1DT1Wguo-FsBBzU3knGI_RluDQ77kJVMq">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ささやき</td><td>75.59 KiB</td><td>0:00:01</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1cUzfcZ09MWbGwYJG0Zl2ifdtKx5PcKbR">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ささやき</td><td>75.59 KiB</td><td>0:00:01</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1aXl3-I3F0hHB485mRKil2uvW4d2iN87U">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>87.59 KiB</td><td>0:00:01</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1niHhq80CGmqcgxw6eYXwVtJ2KcrWeeBY">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>87.59 KiB</td><td>0:00:01</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=19EVdvW4J50D84vN3DsQRbzZYw5ev8kaO">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ささやき</td><td>75.59 KiB</td><td>0:00:01</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1jmNL-_unGfuApJCSe-1_FjfEFbxUjuE8">蜘蛛の糸</a></td><td>芥川竜之介</td><td>ずんだもん-ささやき</td><td>24.55 MiB</td><td>0:08:56</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1K8El_5PlTCjhHdyGhgBej7XrunFQaWH_">懐中時計</a></td><td>土原耕作</td><td>ずんだもん-ノーマル</td><td>1.44 MiB</td><td>0:00:31</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1Y3EuajceYvGJ8sQGffecp2FEwa22simZ">星の銀貨</a></td><td>グリムヴィルヘルム・カール</td><td>ずんだもん-ノーマル</td><td>7.96 MiB</td><td>0:02:53</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1UtFp_GGWYrgwAyzP2nv4iWYfkB74BCZw">『吾輩は猫である』上篇自序</a></td><td>夏目漱石</td><td>ずんだもん-ノーマル</td><td>6.45 MiB</td><td>0:02:20</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=15KWCuFUb8okSASEOlyp8ubLpW6wHlSc6">森先生</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>4.63 MiB</td><td>0:01:41</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1ROdQ0iTeJLmzPU0b0nfOQl5Vshak7XZQ">桜の樹の下には</a></td><td>梶井基次郎</td><td>四国めたん</td><td>4.25 KiB</td><td>0:00:00</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1lfpAOPpucR-3yVK5enLSnOthyfg-mmFl">桜の樹の下には</a></td><td>梶井基次郎</td><td>四国めたん-ノーマル</td><td>12.52 MiB</td><td>0:04:33</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1k2piEVUZQfkLiB0S5SKwY52c1vTZ-Q9Q">形</a></td><td>菊池寛</td><td>ずんだもん-ノーマル</td><td>14.54 MiB</td><td>0:05:17</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1NsUKM4civAnwgz5LrCGE4wq9cBi2cY_L">貉</a></td><td>小泉八雲</td><td>ずんだもん-ノーマル</td><td>12.98 MiB</td><td>0:04:43</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1hNlZO2EyH1PeBDd2vtkG9GknIj1ligvt">貉</a></td><td>小泉八雲</td><td>ずんだもん-ノーマル</td><td>12.99 MiB</td><td>0:04:43</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1ls5sbR4HxV0srnKyB6j7lJd-0aaOTkOQ">星の銀貨</a></td><td>グリムヤーコプ・ルートヴィッヒ・カール</td><td>ずんだもん-ノーマル</td><td>7.96 MiB</td><td>0:02:53</td></tr>
 </table></body></html>
