--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 </tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=15mJDxwXoW0J0VVrwJBZOd0zaiP5-xcb2">黒猫</a></td><td>ポーエドガー・アラン</td><td>ずんだもん-ノーマル</td><td>82.08 MiB</td><td>0:29:53</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1LaMzqXkH_VSROOltt1OulnVXTLbpsfJK">白雪姫</a></td><td>グリムヴィルヘルム・カール</td><td>ずんだもん-ノーマル</td><td>83.2 MiB</td><td>0:30:17</td></tr>
-<tr><td><a href="https://drive.google.com/uc?export=download&id=1HRFRHJF3HCJ7hKWPWtQFWbWk7QI9gK75">谷崎潤一郎氏</a></td><td>芥川竜之介</td><td>四国めたん-ノーマル</td><td>6.51 MiB</td><td>0:02:22</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1aMEidpXt7Yof1v9ofxZKz3aSPFbkA8RB">お金とピストル</a></td><td>香倶土三鳥</td><td>ずんだもん-ノーマル</td><td>3.43 MiB</td><td>0:01:14</td></tr>
 </table></body></html>
